src/test/deca/extension/synt/invalid/test_invalid_08.deca
{
    int [] tab =[1*20];
}